Add Add Products Form 	modified:   .zfproject.xml     - Add product form entry 	modified:   application/controllers/IndexController.php 	modified:   application/controllers/PersonController.php 	modified:   application/controllers/ProductController.php 	new file:   application/forms/AddProduct.php 	modified:   application/layouts/scripts/layout.phtml 	modified:   application/layouts/scripts/sidebar_admin.phtml 	new file:   application/views/scripts/index/update-product.phtml   new file:   application/views/scripts/product/add-product.phtml   new file:   application/views/scripts/product/update-product.phtml

--- a/Ready2Serve/application/layouts/scripts/sidebar_admin.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar_admin.phtml
@@ -23,16 +23,16 @@
             ?>><a href="/product/show-all-products">Show All Product</a></li>
             <li <?php
             if (Zend_Controller_Front::getInstance()->getRequest()
-                            ->getActionName() == '') {
+                            ->getActionName() == 'add-product') {
                 echo "class='active'";
             }
-            ?>><a href="">Add Product</a></li>
+            ?>><a href="/product/add-product">Add Product</a></li>
             <li <?php
             if (Zend_Controller_Front::getInstance()->getRequest()
-                            ->getActionName() == '') {
+                            ->getActionName() == 'update-product') {
                 echo "class='active'";
             }
-            ?>><a href="">Update/Edit Product</a></li>
+            ?>><a href="/product/update-product">Update/Edit Product</a></li>
             <li <?php
             if (Zend_Controller_Front::getInstance()->getRequest()
                             ->getActionName() == '#') {
