Multiple Changes 	modified:   .zfproject.xml 	modified:   application/controllers/ProductController.php     - Add Products Functionality 	new file:   application/forms/AddItemsInDeal.php 	modified:   application/forms/AddProduct.php 	modified:   application/forms/DeleteProducts.php 	modified:   application/models/Product.php 	modified:   application/views/scripts/order/place-order.phtml 	new file:   application/views/scripts/product/add-items-in-deal.phtml 	modified:   application/views/scripts/product/add-product.phtml 	modified:   library/Zend/Form.php 	modified:   public/assets/js/placeOrder.js

--- a/Ready2Serve/application/views/scripts/order/place-order.phtml
+++ b/Ready2Serve/application/views/scripts/order/place-order.phtml
@@ -4,11 +4,8 @@
         <div  class="container" align="center">
             
             <title>Place Order</title>
-            <?php 
-            
-$this->headScript()->appendFile($this->baseUrl('/assets/js/placeOrder.js'));
-//$this->headScript()->offsetSetFile(1, $this->baseUrl('/assets/js/placeOrder.js'));
-?>
+            <?php $this->headScript()->appendFile(
+                    $this->baseUrl('/assets/js/placeOrder.js'));?>
             <?php 
             if ($this->form) {
                 ?>
