--- a/Ready2Serve/application/views/scripts/product/add-product.phtml
+++ b/Ready2Serve/application/views/scripts/product/add-product.phtml
@@ -1,5 +1,6 @@
 <br /><br />
 <title>Add Product</title>
+<form method="post">
 <div id="view-content" align="center">
     <h2>Add Product</h2>
      <table class="table table-striped" style="width:80%">
@@ -24,5 +25,5 @@
                                 <td colspan="2"><?php echo $this->form->getElement('Save'); ?></td></tr>
                     </tbody>
                 </table>
-<?php //echo $this->form;?>
 </div>
+    </form>
